@@ -18,7 +18,6 @@ import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import org.slf4j.Logger;
@@ -38,7 +37,6 @@ public class Chain {
     private Map<String, Resource> resources = new HashMap<String, Resource>();
     private Driver driver;
     private BlockHeaderManager blockHeaderManager;
-    private AtomicBoolean running = new AtomicBoolean(false);
     private Random random = new SecureRandom();
     private ReadWriteLock lock = new ReentrantReadWriteLock();
 
@@ -87,6 +85,14 @@ public class Chain {
         this.resources = resources;
     }
 
+    public String getStubType() {
+        return stubType;
+    }
+
+    public void setStubType(String stubType) {
+        this.stubType = stubType;
+    }
+
     public Driver getDriver() {
         return driver;
     }
@@ -113,7 +119,7 @@ public class Chain {
                         public void onResponse(Exception e, long blockNumber) {
                             if (e != null) {
                                 logger.warn("getBlockNumber exception: " + e);
-                                future.complete(new Long(0));
+                                future.complete(Long.valueOf(0));
                             } else {
                                 future.complete(blockNumber);
                             }
@@ -293,7 +299,7 @@ public class Chain {
                 path.setChain(name);
                 path.setResource(newResourceName);
                 resource.setPath(path);
-                resource.setType(stubType);
+                resource.setStubType(stubType);
                 resource.setTemporary(false);
                 resource.setResourceInfo(newResourceInfo);
                 resource.setBlockHeaderManager(blockHeaderManager);
@@ -334,7 +340,7 @@ public class Chain {
             path.setChain(name);
             path.setResource(newName);
             resource.setPath(path);
-            resource.setType(stubType);
+            resource.setStubType(stubType);
             resource.setTemporary(false);
             resource.setResourceInfo(resourceInfo);
             resource.setBlockHeaderManager(blockHeaderManager);
